fixed dropdown menu alignment

--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -57,7 +57,6 @@
 }
 
 .dropdown {
-  position: absolute;
   font-size: 1.25rem;
   background-color: var(--bg);
   border: var(--border);
